[package]
name = "papaer_git"
version = "0.1.0"
authors = ["MWGuy <yousan4ik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
actix-web = "2"
actix-rt = "1"
actix-service = "1.0.0"
qstring = "0.7.2"