[package]
name = "paper-git"
version = "0.1.0"
authors = ["MWGuy <yousan4ik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2="0.12.0"
log = "0.4"
simple_logger = "1.6.0"
dotenv = "0.15.0"
futures = "0.3.4"
actix-web = "2"
actix-rt = "1"
actix-service = "1.0.0"
qstring = "0.7.2"